[package]
name = "warp_auth_server"
version = "0.1.0"
authors = ["Joshua Cooper <joshua@cooper.cx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.5"
tokio = { version = "0.2.21", features = ["macros"] }
serde = { version = "1.0.116", features = ["derive"] }
rand = "0.8.3"
rust-argon2 = "0.8.3"
